crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__template_literals-7.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"`a \\\\u2212 b`\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 12,
                    },
                },
                span: 0..12,
                kind: ExprStmt(
                    Expr {
                        loc: SourceLocation {
                            start: Position {
                                line: 0,
                                column: 0,
                            },
                            end: Position {
                                line: 0,
                                column: 12,
                            },
                        },
                        span: 0..12,
                        kind: TemplateLiteral(
                            TemplateLiteral {
                                exprs: [],
                                quasis: [
                                    TemplateElem {
                                        loc: SourceLocation {
                                            start: Position {
                                                line: 0,
                                                column: 0,
                                            },
                                            end: Position {
                                                line: 0,
                                                column: 12,
                                            },
                                        },
                                        span: 1..11,
                                        raw: Str(
                                            Str {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 12,
                                                    },
                                                },
                                                span: 1..11,
                                                value: "a \\u2212 b",
                                            },
                                        ),
                                        cooked: Str(
                                            Str {
                                                loc: SourceLocation {
                                                    start: Position {
                                                        line: 0,
                                                        column: 0,
                                                    },
                                                    end: Position {
                                                        line: 0,
                                                        column: 12,
                                                    },
                                                },
                                                span: 1..11,
                                                value: "a − b",
                                            },
                                        ),
                                    },
                                ],
                            },
                        ),
                        inferred_type: None,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
