crates/escalier_hm/src/parser/snapshots/escalier_hm__parser__tests__tuples-3.snap
---
source: crates/escalier_hm/src/parser/mod.rs
expression: "parse(\"let x = [1, [a, b]];\")"
---
Ok(
    Program {
        statements: [
            Statement {
                loc: SourceLocation {
                    start: Position {
                        line: 0,
                        column: 0,
                    },
                    end: Position {
                        line: 0,
                        column: 20,
                    },
                },
                span: 0..20,
                kind: VarDecl(
                    VarDecl {
                        pattern: Pattern {
                            loc: SourceLocation {
                                start: Position {
                                    line: 0,
                                    column: 4,
                                },
                                end: Position {
                                    line: 0,
                                    column: 5,
                                },
                            },
                            span: 4..5,
                            kind: Ident(
                                BindingIdent {
                                    name: "x",
                                    mutable: false,
                                    span: 4..5,
                                    loc: SourceLocation {
                                        start: Position {
                                            line: 0,
                                            column: 4,
                                        },
                                        end: Position {
                                            line: 0,
                                            column: 5,
                                        },
                                    },
                                },
                            ),
                            inferred_type: None,
                        },
                        type_ann: None,
                        init: Some(
                            Expr {
                                loc: SourceLocation {
                                    start: Position {
                                        line: 0,
                                        column: 8,
                                    },
                                    end: Position {
                                        line: 0,
                                        column: 19,
                                    },
                                },
                                span: 8..19,
                                kind: Tuple(
                                    Tuple {
                                        elems: [
                                            ExprOrSpread {
                                                spread: None,
                                                expr: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 9,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 10,
                                                        },
                                                    },
                                                    span: 9..10,
                                                    kind: Lit(
                                                        Num(
                                                            Num {
                                                                loc: SourceLocation {
                                                                    start: Position {
                                                                        line: 0,
                                                                        column: 9,
                                                                    },
                                                                    end: Position {
                                                                        line: 0,
                                                                        column: 10,
                                                                    },
                                                                },
                                                                span: 9..10,
                                                                value: "1",
                                                            },
                                                        ),
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                            ExprOrSpread {
                                                spread: None,
                                                expr: Expr {
                                                    loc: SourceLocation {
                                                        start: Position {
                                                            line: 0,
                                                            column: 12,
                                                        },
                                                        end: Position {
                                                            line: 0,
                                                            column: 18,
                                                        },
                                                    },
                                                    span: 12..18,
                                                    kind: Tuple(
                                                        Tuple {
                                                            elems: [
                                                                ExprOrSpread {
                                                                    spread: None,
                                                                    expr: Expr {
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 13,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 14,
                                                                            },
                                                                        },
                                                                        span: 13..14,
                                                                        kind: Ident(
                                                                            Ident {
                                                                                loc: SourceLocation {
                                                                                    start: Position {
                                                                                        line: 0,
                                                                                        column: 13,
                                                                                    },
                                                                                    end: Position {
                                                                                        line: 0,
                                                                                        column: 14,
                                                                                    },
                                                                                },
                                                                                span: 13..14,
                                                                                name: "a",
                                                                            },
                                                                        ),
                                                                        inferred_type: None,
                                                                    },
                                                                },
                                                                ExprOrSpread {
                                                                    spread: None,
                                                                    expr: Expr {
                                                                        loc: SourceLocation {
                                                                            start: Position {
                                                                                line: 0,
                                                                                column: 16,
                                                                            },
                                                                            end: Position {
                                                                                line: 0,
                                                                                column: 17,
                                                                            },
                                                                        },
                                                                        span: 16..17,
                                                                        kind: Ident(
                                                                            Ident {
                                                                                loc: SourceLocation {
                                                                                    start: Position {
                                                                                        line: 0,
                                                                                        column: 16,
                                                                                    },
                                                                                    end: Position {
                                                                                        line: 0,
                                                                                        column: 17,
                                                                                    },
                                                                                },
                                                                                span: 16..17,
                                                                                name: "b",
                                                                            },
                                                                        ),
                                                                        inferred_type: None,
                                                                    },
                                                                },
                                                            ],
                                                        },
                                                    ),
                                                    inferred_type: None,
                                                },
                                            },
                                        ],
                                    },
                                ),
                                inferred_type: None,
                            },
                        ),
                        declare: false,
                        rec: false,
                    },
                ),
                inferred_type: None,
            },
        ],
    },
)
